Addition of simple JavaFx application, plugin. Enhancement of .gitignore.