@@ -1,5 +1,20 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/0.4.0/javafx.plugin"
+
+version = '3.0'
+
+javafx {
+	javaRuntime = '/Library/Java/JavaVirtualMachines/jdk1.8.0.jdk'
+    appID 'SimpleJavaScriptConsole'
+    appName 'Simple JavaScript Console'
+    mainClass 'com.neumaics.simpleconsole.SimpleConsole'
+
+	// JVM arguments
+    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
+    systemProperties = [ 'prism.disableRegionCaching':'true' ]
+    arguments = ['-l', '--fast']
+}
 
 task wrapper(type: Wrapper) {
 	gradleVersion = '1.11'
